--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,4 +18,6 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #171717;
+  position: relative;
 }
